add da segunda atividade no repositório

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /ListaExercicioseGitHub1Ex01/nbproject/private/
 /ListaExercicioseGitHub1Ex01/build/
+/ListaExercicioseGitHub1Ex02/nbproject/private/
+/ListaExercicioseGitHub1Ex02/build/
